# lightweight-docker-host

./: .gitignore  Dockerfile  README.md  start.sh
nexusagent/: Cargo.toml
nexusagent/evolution/: __init__.py  requirements.txt
nexusagent/evolution/gepa/: engine.py
nexusagent/src/: lib.rs
nexusagent/src/core/: mod.rs
nexusagent/src/core/config/: mod.rs
nexusagent/src/core/ipc/: mod.rs
nexusagent/src/core/memory/: tree.rs
nexusagent/src/core/pev/: mod.rs
nexusagent/src/core/token_juice/: mod.rs
nexusagent/src/core/tools/: registry.rs
nexusagent/ui/: package.json  vite.config.ts
